--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class="row" id="viewblock">
         <div  class="img_div"> 
-            <img id="pizza_pie" class="img-responsive"  src="images/pizza.png">
+            <img id="pizza_pie" class="img-responsive"  src="pizza.png">
         </div>
       <div class="menu_div">
 <button id="menu_list" onclick="displayMenu()" type="button">Display Menu</button>
@@ -43,7 +43,7 @@
     </div>
      </div>
     <div>
-        <img class="img-responsive"  src="images/topping.png">
+        <img class="img-responsive"  src="topping.png">
     </div>
 <footer>
 <p id="footnote">Created by Surya Renga Raman, for Arnav!</p>
